<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="24dp"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <CheckBox
        android:id="@+id/chocolate_syrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/chocolate_syrup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <CheckBox
        android:id="@+id/sprinkles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/sprinkles"
        app:layout_constraintTop_toBottomOf="@+id/chocolate_syrup"
        app:layout_constraintStart_toStartOf="@id/chocolate_syrup"
        tools:layout_editor_absoluteX="24dp" />

    <CheckBox
        android:id="@+id/crushned_nuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/crushned_nuts"
        app:layout_constraintStart_toStartOf="@+id/sprinkles"
        app:layout_constraintTop_toBottomOf="@+id/sprinkles" />

    <CheckBox
        android:id="@+id/cherries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cherries"
        app:layout_constraintStart_toStartOf="@+id/crushned_nuts"
        app:layout_constraintTop_toBottomOf="@+id/crushned_nuts" />

    <CheckBox
        android:id="@+id/orio_cookies_cumbles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/orio_cookies_cumbles"
        app:layout_constraintStart_toStartOf="@+id/cherries"
        app:layout_constraintTop_toBottomOf="@+id/cherries" />

    <Button
        android:id="@+id/bt_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/show_toast"
        android:onClick="showToast"
        app:layout_constraintStart_toStartOf="@+id/orio_cookies_cumbles"
        app:layout_constraintTop_toBottomOf="@+id/orio_cookies_cumbles" />


</androidx.constraintlayout.widget.ConstraintLayout>